Add DFA validation check

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <li role="presentation"><a href="#json">JSON</a></li>
       </ul>
       <div class="toolbar">
-        <span id="error" class="error text-danger">JSON is malformed!</span>
+        <span id="error" class="error text-danger">Finite automata is invalid!</span>
         <label for="examples">Examples:</label>
         <select id="examples">
           <option value="-1"></option>
