Add file upload functionality

--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
         <div class="navbar-header">
           <a class="navbar-brand" href="#">DFA Studio</a>
         </div>
-
+        <div class="collapse navbar-collapse">
+          <form id="upload" class="navbar-form navbar-right">
+            <input type="file" class="hidden">
+            <button type="submit" class="btn btn-primary">Upload DFA</button>
+          </form>
+        </div>
       </div>
     </nav>
   </header>
